[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/gui/context_container/UnitActions.gd" type="Script" id=1]

[sub_resource type="InputEventKey" id=1]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = true
scancode = 77
unicode = 0
echo = false

[sub_resource type="ShortCut" id=2]

shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = true
scancode = 79
unicode = 0
echo = false

[sub_resource type="ShortCut" id=4]

shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = false
scancode = 16777221
unicode = 0
echo = false

[sub_resource type="ShortCut" id=6]

shortcut = SubResource( 5 )

[node name="UnitActions" type="PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 411.0
margin_bottom = 34.0
grow_vertical = 0
rect_min_size = Vector2( 300, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 404.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 397.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MoveButton" type="Button" parent="MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 71.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 2 )
group = null
text = "Move [M]"
flat = false
align = 1

[node name="RotateButton" type="Button" parent="MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_right = 151.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 4 )
group = null
text = "Rotate [O]"
flat = false
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_right = 389.0
margin_bottom = 20.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="DoneButton" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_right = 234.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 6 )
group = null
text = "End Turn [Enter]"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Size Flags" ]

[connection signal="pressed" from="MarginContainer/HBoxContainer/MoveButton" to="." method="_move_button_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/RotateButton" to="." method="_rotate_button_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/DoneButton" to="." method="_done_button_pressed"]


